3822B1PE4/8_fft_cufft/shuravina_oksana/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/8_fft_cufft/shuravina_oksana/fft_cufft.cu(103): error: a host function call cannot be configured
          normalizeKernel<<<numBlocks, blockSize>>>(d_result, scale, totalElements);
                                                   ^

1 error detected in the compilation of "/home/crazyproger/sandbox/gpu-2025/3822B1PE4/8_fft_cufft/shuravina_oksana/fft_cufft.cu".
